# git-ml-backend

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: python_tests.yml  trunk_check.yml
.trunk/: trunk.yaml
scripts/: create_dev_repos.py  pydriller.ipynb
src/: main.py
src/git_ml_backend/: env.py  main.py
src/git_ml_backend/routes/repo/: __init__.py  repo_service.py  router.py
src/git_ml_backend/routes/repo/schemas/: commit.py
src/git_ml_backend/types/: date_time.py
src/git_ml_backend/types/exceptions/: __init__.py  repo_exists_error.py
src/routes/repo/: repo_service.py  router.py
src/routes/repo/schemas/: __init__.py  commit.py
src/utils/: typing.py
src/utils/typing/: __init__.py
temp/example/: README.md
tests/: conftest.py
tests/routes/repo/: test_repo_service.py
tests/types/: test_date_time.py
tests/utils/typing/: test_date_time.py
