[project]
name = "git-ml-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kyle Newman", email = "kyle@thenewmans.com.au"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
